[package]
name = "xlog"
version = "0.1.0"
authors = ["修伟 <forty40@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.25.3"
colored = "2.0.0"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
